--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Table builder that generates HTML",
   "main": "server.js",
   "scripts": {
-    "start": "gulp",
+    "start": "gulp build-zoolander && gulp",
     "test": "karma start"
   },
   "keywords": [
